--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,17 @@
-body{
+*{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+}
+
+#content{
+    height: 100vh;
+    width: 100vw;
 }
 
 header{
